# latentlens

./: .gitignore  quickstart.py
experiment/: pyproject.toml
experiment/data/results/: nn_results_fp16.json
experiment/docs/: experiment_spec.md  notes.txt  objective.txt
experiment/qllens/: config.yaml
experiment/qllens/src/: config.py  data.py  extract.py  index.py  models.py  nn_search.py  run.py  wordnet_h2.py
experiment/scripts/: build_pixmo_cap_100.py  download_from_hub.py  prepare_pixmo_cap.py
experiment/working_nbs/: 1_eda.ipynb  2_eda_pixmo.ipynb  3_bbox_check.ipynb  4_fp_baseline.ipynb  5_bnb_8_bit.ipynb
latentlens/: extract.py  models.py
reproduce/scripts/evaluate/: evaluate_interpretability.py  utils.py
